src/parser/generated/CPP14Parser.ts
// Generated from src/parser/CPP14Parser.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { CPP14ParserVisitor } from "./CPP14ParserVisitor";


export class CPP14Parser extends Parser {
	public static readonly CLASS = 1;
	public static readonly VOID = 2;
	public static readonly IF = 3;
	public static readonly ELSE = 4;
	public static readonly WHILE = 5;
	public static readonly FOR = 6;
	public static readonly OR = 7;
	public static readonly AND = 8;
	public static readonly ID = 9;
	public static readonly INT = 10;
	public static readonly WS = 11;
	public static readonly PLUS = 12;
	public static readonly MINUS = 13;
	public static readonly MUL = 14;
	public static readonly DIV = 15;
	public static readonly ASSIGN = 16;
	public static readonly LBRACKET = 17;
	public static readonly RBRACKET = 18;
	public static readonly COMMA = 19;
	public static readonly EQUAL = 20;
	public static readonly NOT_EQUAL = 21;
	public static readonly LT = 22;
	public static readonly GT = 23;
	public static readonly LE = 24;
	public static readonly GE = 25;
	public static readonly PLUSPLUS = 26;
	public static readonly MINUSMINUS = 27;
	public static readonly PLUS_ASSIGN = 28;
	public static readonly MINUS_ASSIGN = 29;
	public static readonly LPAREN = 30;
	public static readonly RPAREN = 31;
	public static readonly LBRACE = 32;
	public static readonly RBRACE = 33;
	public static readonly SEMI = 34;
	public static readonly RULE_compilationUnit = 0;
	public static readonly RULE_declaration = 1;
	public static readonly RULE_functionDefinition = 2;
	public static readonly RULE_variableDeclaration = 3;
	public static readonly RULE_classDefinition = 4;
	public static readonly RULE_classMember = 5;
	public static readonly RULE_functionDeclaration = 6;
	public static readonly RULE_typeSpecifier = 7;
	public static readonly RULE_declarator = 8;
	public static readonly RULE_parameterList = 9;
	public static readonly RULE_parameter = 10;
	public static readonly RULE_compoundStatement = 11;
	public static readonly RULE_statement = 12;
	public static readonly RULE_expressionStatement = 13;
	public static readonly RULE_selectionStatement = 14;
	public static readonly RULE_iterationStatement = 15;
	public static readonly RULE_expression = 16;
	public static readonly RULE_assignmentExpression = 17;
	public static readonly RULE_logicalOrExpression = 18;
	public static readonly RULE_logicalAndExpression = 19;
	public static readonly RULE_equalityExpression = 20;
	public static readonly RULE_relationalExpression = 21;
	public static readonly RULE_additiveExpression = 22;
	public static readonly RULE_multiplicativeExpression = 23;
	public static readonly RULE_unaryExpression = 24;
	public static readonly RULE_postfixExpression = 25;
	public static readonly RULE_primaryExpression = 26;
	public static readonly RULE_argumentList = 27;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"compilationUnit", "declaration", "functionDefinition", "variableDeclaration", 
		"classDefinition", "classMember", "functionDeclaration", "typeSpecifier", 
		"declarator", "parameterList", "parameter", "compoundStatement", "statement", 
		"expressionStatement", "selectionStatement", "iterationStatement", "expression", 
		"assignmentExpression", "logicalOrExpression", "logicalAndExpression", 
		"equalityExpression", "relationalExpression", "additiveExpression", "multiplicativeExpression", 
		"unaryExpression", "postfixExpression", "primaryExpression", "argumentList",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'class'", "'void'", "'if'", "'else'", "'while'", "'for'", 
		"'||'", "'&&'", undefined, undefined, undefined, "'+'", "'-'", "'*'", 
		"'/'", "'='", "'['", "']'", "','", "'=='", "'!='", "'<'", "'>'", "'<='", 
		"'>='", "'++'", "'--'", "'+='", "'-='", "'('", "')'", "'{'", "'}'", "';'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "CLASS", "VOID", "IF", "ELSE", "WHILE", "FOR", "OR", "AND", 
		"ID", "INT", "WS", "PLUS", "MINUS", "MUL", "DIV", "ASSIGN", "LBRACKET", 
		"RBRACKET", "COMMA", "EQUAL", "NOT_EQUAL", "LT", "GT", "LE", "GE", "PLUSPLUS", 
		"MINUSMINUS", "PLUS_ASSIGN", "MINUS_ASSIGN", "LPAREN", "RPAREN", "LBRACE", 
		"RBRACE", "SEMI",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(CPP14Parser._LITERAL_NAMES, CPP14Parser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return CPP14Parser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "CPP14Parser.g4"; }

	// @Override
	public get ruleNames(): string[] { return CPP14Parser.ruleNames; }

	// @Override
	public get serializedATN(): string { return CPP14Parser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(CPP14Parser._ATN, this);
	}
	// @RuleVersion(0)
	public compilationUnit(): CompilationUnitContext {
		let _localctx: CompilationUnitContext = new CompilationUnitContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, CPP14Parser.RULE_compilationUnit);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 59;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << CPP14Parser.CLASS) | (1 << CPP14Parser.VOID) | (1 << CPP14Parser.INT))) !== 0) || _la === CPP14Parser.SEMI) {
				{
				{
				this.state = 56;
				this.declaration();
				}
				}
				this.state = 61;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 62;
			this.match(CPP14Parser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public declaration(): DeclarationContext {
		let _localctx: DeclarationContext = new DeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, CPP14Parser.RULE_declaration);
		try {
			this.state = 68;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 1, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 64;
				this.functionDefinition();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 65;
				this.variableDeclaration();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 66;
				this.classDefinition();
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 67;
				this.match(CPP14Parser.SEMI);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public functionDefinition(): FunctionDefinitionContext {
		let _localctx: FunctionDefinitionContext = new FunctionDefinitionContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, CPP14Parser.RULE_functionDefinition);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 70;
			this.typeSpecifier();
			this.state = 71;
			this.match(CPP14Parser.ID);
			this.state = 72;
			this.match(CPP14Parser.LPAREN);
			this.state = 74;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << CPP14Parser.CLASS) | (1 << CPP14Parser.VOID) | (1 << CPP14Parser.INT))) !== 0)) {
				{
				this.state = 73;
				this.parameterList();
				}
			}

			this.state = 76;
			this.match(CPP14Parser.RPAREN);
			this.state = 77;
			this.compoundStatement();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public variableDeclaration(): VariableDeclarationContext {
		let _localctx: VariableDeclarationContext = new VariableDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, CPP14Parser.RULE_variableDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 79;
			this.typeSpecifier();
			this.state = 80;
			this.declarator(0);
			this.state = 83;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === CPP14Parser.ASSIGN) {
				{
				this.state = 81;
				this.match(CPP14Parser.ASSIGN);
				this.state = 82;
				this.expression();
				}
			}

			this.state = 85;
			this.match(CPP14Parser.SEMI);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public classDefinition(): ClassDefinitionContext {
		let _localctx: ClassDefinitionContext = new ClassDefinitionContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, CPP14Parser.RULE_classDefinition);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 87;
			this.match(CPP14Parser.CLASS);
			this.state = 88;
			this.match(CPP14Parser.ID);
			this.state = 89;
			this.match(CPP14Parser.LBRACE);
			this.state = 95;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << CPP14Parser.CLASS) | (1 << CPP14Parser.VOID) | (1 << CPP14Parser.INT))) !== 0)) {
				{
				{
				this.state = 90;
				this.classMember();
				this.state = 91;
				this.match(CPP14Parser.SEMI);
				}
				}
				this.state = 97;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 98;
			this.match(CPP14Parser.RBRACE);
			this.state = 99;
			this.match(CPP14Parser.SEMI);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public classMember(): ClassMemberContext {
		let _localctx: ClassMemberContext = new ClassMemberContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, CPP14Parser.RULE_classMember);
		try {
			this.state = 103;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 5, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 101;
				this.variableDeclaration();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 102;
				this.functionDeclaration();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public functionDeclaration(): FunctionDeclarationContext {
		let _localctx: FunctionDeclarationContext = new FunctionDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, CPP14Parser.RULE_functionDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 105;
			this.typeSpecifier();
			this.state = 106;
			this.match(CPP14Parser.ID);
			this.state = 107;
			this.match(CPP14Parser.LPAREN);
			this.state = 109;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << CPP14Parser.CLASS) | (1 << CPP14Parser.VOID) | (1 << CPP14Parser.INT))) !== 0)) {
				{
				this.state = 108;
				this.parameterList();
				}
			}

			this.state = 111;
			this.match(CPP14Parser.RPAREN);
			this.state = 112;
			this.match(CPP14Parser.SEMI);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public typeSpecifier(): TypeSpecifierContext {
		let _localctx: TypeSpecifierContext = new TypeSpecifierContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, CPP14Parser.RULE_typeSpecifier);
		try {
			this.state = 118;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case CPP14Parser.INT:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 114;
				this.match(CPP14Parser.INT);
				}
				break;
			case CPP14Parser.VOID:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 115;
				this.match(CPP14Parser.VOID);
				}
				break;
			case CPP14Parser.CLASS:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 116;
				this.match(CPP14Parser.CLASS);
				this.state = 117;
				this.match(CPP14Parser.ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public declarator(): DeclaratorContext;
	public declarator(_p: number): DeclaratorContext;
	// @RuleVersion(0)
	public declarator(_p?: number): DeclaratorContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let _localctx: DeclaratorContext = new DeclaratorContext(this._ctx, _parentState);
		let _prevctx: DeclaratorContext = _localctx;
		let _startState: number = 16;
		this.enterRecursionRule(_localctx, 16, CPP14Parser.RULE_declarator, _p);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			{
			this.state = 121;
			this.match(CPP14Parser.ID);
			}
			this._ctx._stop = this._input.tryLT(-1);
			this.state = 129;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 8, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = _localctx;
					{
					{
					_localctx = new DeclaratorContext(_parentctx, _parentState);
					this.pushNewRecursionContext(_localctx, _startState, CPP14Parser.RULE_declarator);
					this.state = 123;
					if (!(this.precpred(this._ctx, 1))) {
						throw this.createFailedPredicateException("this.precpred(this._ctx, 1)");
					}
					this.state = 124;
					this.match(CPP14Parser.LBRACKET);
					this.state = 125;
					this.match(CPP14Parser.INT);
					this.state = 126;
					this.match(CPP14Parser.RBRACKET);
					}
					}
				}
				this.state = 131;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 8, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public parameterList(): ParameterListContext {
		let _localctx: ParameterListContext = new ParameterListContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, CPP14Parser.RULE_parameterList);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 132;
			this.parameter();
			this.state = 137;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === CPP14Parser.COMMA) {
				{
				{
				this.state = 133;
				this.match(CPP14Parser.COMMA);
				this.state = 134;
				this.parameter();
				}
				}
				this.state = 139;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public parameter(): ParameterContext {
		let _localctx: ParameterContext = new ParameterContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, CPP14Parser.RULE_parameter);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 140;
			this.typeSpecifier();
			this.state = 141;
			this.declarator(0);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public compoundStatement(): CompoundStatementContext {
		let _localctx: CompoundStatementContext = new CompoundStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, CPP14Parser.RULE_compoundStatement);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 143;
			this.match(CPP14Parser.LBRACE);
			this.state = 147;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (((((_la - 3)) & ~0x1F) === 0 && ((1 << (_la - 3)) & ((1 << (CPP14Parser.IF - 3)) | (1 << (CPP14Parser.WHILE - 3)) | (1 << (CPP14Parser.FOR - 3)) | (1 << (CPP14Parser.ID - 3)) | (1 << (CPP14Parser.INT - 3)) | (1 << (CPP14Parser.PLUS - 3)) | (1 << (CPP14Parser.MINUS - 3)) | (1 << (CPP14Parser.PLUSPLUS - 3)) | (1 << (CPP14Parser.MINUSMINUS - 3)) | (1 << (CPP14Parser.LPAREN - 3)) | (1 << (CPP14Parser.LBRACE - 3)) | (1 << (CPP14Parser.SEMI - 3)))) !== 0)) {
				{
				{
				this.state = 144;
				this.statement();
				}
				}
				this.state = 149;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 150;
			this.match(CPP14Parser.RBRACE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let _localctx: StatementContext = new StatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, CPP14Parser.RULE_statement);
		try {
			this.state = 156;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case CPP14Parser.ID:
			case CPP14Parser.INT:
			case CPP14Parser.PLUS:
			case CPP14Parser.MINUS:
			case CPP14Parser.PLUSPLUS:
			case CPP14Parser.MINUSMINUS:
			case CPP14Parser.LPAREN:
			case CPP14Parser.SEMI:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 152;
				this.expressionStatement();
				}
				break;
			case CPP14Parser.LBRACE:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 153;
				this.compoundStatement();
				}
				break;
			case CPP14Parser.IF:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 154;
				this.selectionStatement();
				}
				break;
			case CPP14Parser.WHILE:
			case CPP14Parser.FOR:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 155;
				this.iterationStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public expressionStatement(): ExpressionStatementContext {
		let _localctx: ExpressionStatementContext = new ExpressionStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, CPP14Parser.RULE_expressionStatement);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 159;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << CPP14Parser.ID) | (1 << CPP14Parser.INT) | (1 << CPP14Parser.PLUS) | (1 << CPP14Parser.MINUS) | (1 << CPP14Parser.PLUSPLUS) | (1 << CPP14Parser.MINUSMINUS) | (1 << CPP14Parser.LPAREN))) !== 0)) {
				{
				this.state = 158;
				this.expression();
				}
			}

			this.state = 161;
			this.match(CPP14Parser.SEMI);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public selectionStatement(): SelectionStatementContext {
		let _localctx: SelectionStatementContext = new SelectionStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 28, CPP14Parser.RULE_selectionStatement);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 163;
			this.match(CPP14Parser.IF);
			this.state = 164;
			this.match(CPP14Parser.LPAREN);
			this.state = 165;
			this.expression();
			this.state = 166;
			this.match(CPP14Parser.RPAREN);
			this.state = 167;
			this.statement();
			this.state = 170;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 13, this._ctx) ) {
			case 1:
				{
				this.state = 168;
				this.match(CPP14Parser.ELSE);
				this.state = 169;
				this.statement();
				}
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public iterationStatement(): IterationStatementContext {
		let _localctx: IterationStatementContext = new IterationStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 30, CPP14Parser.RULE_iterationStatement);
		let _la: number;
		try {
			this.state = 193;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case CPP14Parser.WHILE:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 172;
				this.match(CPP14Parser.WHILE);
				this.state = 173;
				this.match(CPP14Parser.LPAREN);
				this.state = 174;
				this.expression();
				this.state = 175;
				this.match(CPP14Parser.RPAREN);
				this.state = 176;
				this.statement();
				}
				break;
			case CPP14Parser.FOR:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 178;
				this.match(CPP14Parser.FOR);
				this.state = 179;
				this.match(CPP14Parser.LPAREN);
				this.state = 181;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << CPP14Parser.ID) | (1 << CPP14Parser.INT) | (1 << CPP14Parser.PLUS) | (1 << CPP14Parser.MINUS) | (1 << CPP14Parser.PLUSPLUS) | (1 << CPP14Parser.MINUSMINUS) | (1 << CPP14Parser.LPAREN))) !== 0)) {
					{
					this.state = 180;
					this.expression();
					}
				}

				this.state = 183;
				this.match(CPP14Parser.SEMI);
				this.state = 185;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << CPP14Parser.ID) | (1 << CPP14Parser.INT) | (1 << CPP14Parser.PLUS) | (1 << CPP14Parser.MINUS) | (1 << CPP14Parser.PLUSPLUS) | (1 << CPP14Parser.MINUSMINUS) | (1 << CPP14Parser.LPAREN))) !== 0)) {
					{
					this.state = 184;
					this.expression();
					}
				}

				this.state = 187;
				this.match(CPP14Parser.SEMI);
				this.state = 189;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << CPP14Parser.ID) | (1 << CPP14Parser.INT) | (1 << CPP14Parser.PLUS) | (1 << CPP14Parser.MINUS) | (1 << CPP14Parser.PLUSPLUS) | (1 << CPP14Parser.MINUSMINUS) | (1 << CPP14Parser.LPAREN))) !== 0)) {
					{
					this.state = 188;
					this.expression();
					}
				}

				this.state = 191;
				this.match(CPP14Parser.RPAREN);
				this.state = 192;
				this.statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public expression(): ExpressionContext {
		let _localctx: ExpressionContext = new ExpressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 32, CPP14Parser.RULE_expression);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 195;
			this.assignmentExpression();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public assignmentExpression(): AssignmentExpressionContext {
		let _localctx: AssignmentExpressionContext = new AssignmentExpressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 34, CPP14Parser.RULE_assignmentExpression);
		let _la: number;
		try {
			this.state = 202;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 18, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 197;
				this.logicalOrExpression(0);
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 198;
				this.unaryExpression();
				this.state = 199;
				_la = this._input.LA(1);
				if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << CPP14Parser.ASSIGN) | (1 << CPP14Parser.PLUS_ASSIGN) | (1 << CPP14Parser.MINUS_ASSIGN))) !== 0))) {
				this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				this.state = 200;
				this.assignmentExpression();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public logicalOrExpression(): LogicalOrExpressionContext;
	public logicalOrExpression(_p: number): LogicalOrExpressionContext;
	// @RuleVersion(0)
	public logicalOrExpression(_p?: number): LogicalOrExpressionContext {
		if (_p === undefined) {
			_p = 0;
		}
